Updating with current SNe Analysis files.

--- a/Dictionary.ipynb
+++ b/Dictionary.ipynb
@@ -5,7 +5,7 @@
    "id": "e872ef5a",
    "metadata": {},
    "source": [
-    "## Python: Numpy, Pynbody, Pandas; Cheat Sheet\n",
+    "# Python: Numpy, Pynbody, Pandas; Cheat Sheet\n",
     "`-- Leo Lonzarich, September 26 2021 --`\n",
     "\n",
     "### Table of Contents\n",
@@ -49,8 +49,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "np.apply_along_axis(np.linalg.norm, 1, x) # find the magnitude of rows in a matrix.\n",
-    "\n"
+    "# find the magnitude of rows in a matrix.\n",
+    "\n",
+    "\n",
+    "np.apply_along_axis(np.linalg.norm, 1, x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb42979a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# To sort the id tags of a data set, and then pick out the members of another data set that have matching identifiers.\n",
+    "\n",
+    "\n",
+    "# Ids of preheated\n",
+    "x = np.array(preheated['pid'])\n",
+    "# Ids of discharged, SNe heated gas\n",
+    "y = np.array(hot_discharged['pid'])\n",
+    "\n",
+    "index = np.argsort(x)\n",
+    "sorted_x = x[index] # Sorted list of ids pre discharged                        \n",
+    "sorted_index = np.searchsorted(sorted_x, y)\n",
+    "yindex = np.take(index, sorted_index, mode=\"clip\")\n",
+    "mask = x[yindex] != y\n",
+    "result = np.ma.array(yindex, mask=mask)\n",
+    "hot_preheated = preheated.iloc[result[~result.mask].data] # Array of all iords   "
    ]
   },
   {
