Nov 2 updates; r/Rvir analysis.

--- a/Dictionary.ipynb
+++ b/Dictionary.ipynb
@@ -25,13 +25,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "1bd8fba9",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10.1 ns ± 0.169 ns per loop (mean ± std. dev. of 7 runs, 100000000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# use before an operation to measure the amount of time it takes to complete\n",
+    "%timeit #single line\n",
+    "%%timeit #entire box\n",
+    "# or for a function foobar(x,y)\n",
+    "timeit.timeit('foobar(x,y)', number=1000, globals = globals())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b35f56f9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%timeit # use before an operation to measure the amount of time it takes to complete\n",
-    "\n"
+    "bincount = 100\n",
+    "bins = radialbins(discharged, bincount,1.0)\n",
+    "\n",
+    "# assigning particles in each set to equal sets of bins.\n",
+    "_all, x = np.histogram(all_rR, bins=bins, weights=discharged.weight)\n",
+    "\n",
+    "_hot, x = np.histogram(hot_rR, bins=bins, weights=heated.weight)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4b380914",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%timeit\n",
+    "\n",
+    "sne_ratio = np.array([])\n",
+    "\n",
+    "for i in range(0, bincount-1):\n",
+    "    ratio = _hot[i]/_all[i]\n",
+    "    sne_ratio = np.append(sne_ratio, ratio)\n",
+    "    i += 1\n",
+    "\n",
+    "sne_ratio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0fd7c969",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%timeit\n",
+    "\n",
+    "sne_ratio = np.zeros(bincount)\n",
+    "\n",
+    "for i in range(0, 99):\n",
+    "    ratio = _hot[i]/_all[i]\n",
+    "    sne_ratio = np.append(sne_ratio, ratio)\n",
+    "    i += 1\n",
+    "\n",
+    "sne_ratio"
    ]
   },
   {
