--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -24,6 +24,523 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "id": "fd99b977",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████████████| 5672/5672 [00:05<00:00, 1072.95it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Calculating heated angles.\n",
+      "Saving h242_41 preheated particle dataset to /home/lonzaric/astro_research/Stellar_Feedback_Code/SNeData/preheated_particles.hdf5\n",
+      "Saving h242_41 heated particle dataset to /home/lonzaric/astro_research/Stellar_Feedback_Code/SNeData/heated_particles.hdf5\n",
+      "> Returning (preheated, heated) datasets <\n"
+     ]
+    }
+   ],
+   "source": [
+    "keys = ['h242_41']\n",
+    "\n",
+    "for key in keys:\n",
+    "    sim = str(key[:4])\n",
+    "    haloid = int(key[5:])\n",
+    "    # note that heated is automatically concatenated by 'calc_ejected_expelled'.\n",
+    "    heated = calc_dsrg_heated(sim, haloid, save=True, verbose=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "98f8c7b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "h148_13 h148_278 h148_28 h148_283 h148_329 h148_37 h148_45 h148_68 h148_80 h229_20 h229_22 h229_23 h229_27 h229_55 h242_24 h242_41 h242_80 h329_137 h329_33\n",
+      "> Returning (predischarged, discharged, accreted, preheated, heated) for all available satellites <\n"
+     ]
+    }
+   ],
+   "source": [
+    "predischarged, discharged, accreted, preheated, heated = read_discharged()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "11c057c6",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>time</th>\n",
+       "      <th>pid</th>\n",
+       "      <th>rho</th>\n",
+       "      <th>temp</th>\n",
+       "      <th>mass</th>\n",
+       "      <th>coolontime</th>\n",
+       "      <th>r</th>\n",
+       "      <th>r_per_Rvir</th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "      <th>...</th>\n",
+       "      <th>r_gal</th>\n",
+       "      <th>host_r_gal</th>\n",
+       "      <th>sat_disk</th>\n",
+       "      <th>sat_halo</th>\n",
+       "      <th>host_disk</th>\n",
+       "      <th>host_halo</th>\n",
+       "      <th>other_sat</th>\n",
+       "      <th>IGM</th>\n",
+       "      <th>angle</th>\n",
+       "      <th>key</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>131</th>\n",
+       "      <td>12.150951</td>\n",
+       "      <td>11100527</td>\n",
+       "      <td>0.166110</td>\n",
+       "      <td>7.213274e+05</td>\n",
+       "      <td>19375.947033</td>\n",
+       "      <td>12.173343</td>\n",
+       "      <td>0.484826</td>\n",
+       "      <td>0.008223</td>\n",
+       "      <td>0.110528</td>\n",
+       "      <td>-0.288046</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.803584</td>\n",
+       "      <td>20.529471</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>132.074365</td>\n",
+       "      <td>h148_13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>196</th>\n",
+       "      <td>7.039793</td>\n",
+       "      <td>12785234</td>\n",
+       "      <td>1.883412</td>\n",
+       "      <td>9.293573e+04</td>\n",
+       "      <td>28326.998601</td>\n",
+       "      <td>7.067249</td>\n",
+       "      <td>0.516366</td>\n",
+       "      <td>0.011357</td>\n",
+       "      <td>-0.261572</td>\n",
+       "      <td>0.431688</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.844084</td>\n",
+       "      <td>21.027921</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>64.047083</td>\n",
+       "      <td>h148_13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>252</th>\n",
+       "      <td>6.905111</td>\n",
+       "      <td>12793384</td>\n",
+       "      <td>0.085164</td>\n",
+       "      <td>1.222081e+06</td>\n",
+       "      <td>31665.645124</td>\n",
+       "      <td>6.928359</td>\n",
+       "      <td>0.656143</td>\n",
+       "      <td>0.014659</td>\n",
+       "      <td>0.163661</td>\n",
+       "      <td>0.620284</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.860788</td>\n",
+       "      <td>17.825822</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>120.198725</td>\n",
+       "      <td>h148_13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>268</th>\n",
+       "      <td>8.198053</td>\n",
+       "      <td>12794851</td>\n",
+       "      <td>0.340908</td>\n",
+       "      <td>2.927524e+04</td>\n",
+       "      <td>29077.386044</td>\n",
+       "      <td>8.208670</td>\n",
+       "      <td>1.043853</td>\n",
+       "      <td>0.020372</td>\n",
+       "      <td>0.288292</td>\n",
+       "      <td>0.893937</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.853104</td>\n",
+       "      <td>17.746425</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>82.862729</td>\n",
+       "      <td>h148_13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>277</th>\n",
+       "      <td>10.352954</td>\n",
+       "      <td>12794927</td>\n",
+       "      <td>0.811883</td>\n",
+       "      <td>4.846995e+05</td>\n",
+       "      <td>30634.527073</td>\n",
+       "      <td>10.373126</td>\n",
+       "      <td>0.491615</td>\n",
+       "      <td>0.009339</td>\n",
+       "      <td>-0.168405</td>\n",
+       "      <td>-0.276818</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.716398</td>\n",
+       "      <td>19.590469</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>166.315932</td>\n",
+       "      <td>h148_13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4335</th>\n",
+       "      <td>7.767072</td>\n",
+       "      <td>6627703</td>\n",
+       "      <td>0.013900</td>\n",
+       "      <td>3.482225e+05</td>\n",
+       "      <td>27251.026654</td>\n",
+       "      <td>7.779375</td>\n",
+       "      <td>1.171662</td>\n",
+       "      <td>0.041392</td>\n",
+       "      <td>-0.760433</td>\n",
+       "      <td>-0.261090</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.538882</td>\n",
+       "      <td>12.023541</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>119.640462</td>\n",
+       "      <td>h329_33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4342</th>\n",
+       "      <td>8.090307</td>\n",
+       "      <td>6627723</td>\n",
+       "      <td>0.000217</td>\n",
+       "      <td>8.900519e+04</td>\n",
+       "      <td>26668.152244</td>\n",
+       "      <td>7.914897</td>\n",
+       "      <td>6.129080</td>\n",
+       "      <td>0.209182</td>\n",
+       "      <td>-3.591605</td>\n",
+       "      <td>2.468435</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.384223</td>\n",
+       "      <td>11.540393</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>121.415964</td>\n",
+       "      <td>h329_33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4345</th>\n",
+       "      <td>7.443837</td>\n",
+       "      <td>6627729</td>\n",
+       "      <td>0.047381</td>\n",
+       "      <td>1.285620e+05</td>\n",
+       "      <td>18932.963863</td>\n",
+       "      <td>7.444459</td>\n",
+       "      <td>0.950266</td>\n",
+       "      <td>0.034908</td>\n",
+       "      <td>-0.111102</td>\n",
+       "      <td>0.628777</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.461759</td>\n",
+       "      <td>12.407557</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>77.476906</td>\n",
+       "      <td>h329_33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4358</th>\n",
+       "      <td>8.413543</td>\n",
+       "      <td>6630126</td>\n",
+       "      <td>0.063785</td>\n",
+       "      <td>1.126530e+04</td>\n",
+       "      <td>26755.941329</td>\n",
+       "      <td>8.272644</td>\n",
+       "      <td>0.819111</td>\n",
+       "      <td>0.027533</td>\n",
+       "      <td>-0.748168</td>\n",
+       "      <td>-0.128032</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.383017</td>\n",
+       "      <td>10.988910</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>53.793614</td>\n",
+       "      <td>h329_33</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4368</th>\n",
+       "      <td>8.090307</td>\n",
+       "      <td>6630196</td>\n",
+       "      <td>0.079972</td>\n",
+       "      <td>1.108672e+04</td>\n",
+       "      <td>26645.695937</td>\n",
+       "      <td>7.904796</td>\n",
+       "      <td>0.840242</td>\n",
+       "      <td>0.028677</td>\n",
+       "      <td>0.797118</td>\n",
+       "      <td>-0.087680</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.384223</td>\n",
+       "      <td>11.540393</td>\n",
+       "      <td>False</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>133.845505</td>\n",
+       "      <td>h329_33</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>15229 rows × 62 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           time       pid       rho          temp          mass  coolontime  \\\n",
+       "131   12.150951  11100527  0.166110  7.213274e+05  19375.947033   12.173343   \n",
+       "196    7.039793  12785234  1.883412  9.293573e+04  28326.998601    7.067249   \n",
+       "252    6.905111  12793384  0.085164  1.222081e+06  31665.645124    6.928359   \n",
+       "268    8.198053  12794851  0.340908  2.927524e+04  29077.386044    8.208670   \n",
+       "277   10.352954  12794927  0.811883  4.846995e+05  30634.527073   10.373126   \n",
+       "...         ...       ...       ...           ...           ...         ...   \n",
+       "4335   7.767072   6627703  0.013900  3.482225e+05  27251.026654    7.779375   \n",
+       "4342   8.090307   6627723  0.000217  8.900519e+04  26668.152244    7.914897   \n",
+       "4345   7.443837   6627729  0.047381  1.285620e+05  18932.963863    7.444459   \n",
+       "4358   8.413543   6630126  0.063785  1.126530e+04  26755.941329    8.272644   \n",
+       "4368   8.090307   6630196  0.079972  1.108672e+04  26645.695937    7.904796   \n",
+       "\n",
+       "             r  r_per_Rvir         x         y  ...     r_gal  host_r_gal  \\\n",
+       "131   0.484826    0.008223  0.110528 -0.288046  ...  0.803584   20.529471   \n",
+       "196   0.516366    0.011357 -0.261572  0.431688  ...  0.844084   21.027921   \n",
+       "252   0.656143    0.014659  0.163661  0.620284  ...  0.860788   17.825822   \n",
+       "268   1.043853    0.020372  0.288292  0.893937  ...  0.853104   17.746425   \n",
+       "277   0.491615    0.009339 -0.168405 -0.276818  ...  0.716398   19.590469   \n",
+       "...        ...         ...       ...       ...  ...       ...         ...   \n",
+       "4335  1.171662    0.041392 -0.760433 -0.261090  ...  0.538882   12.023541   \n",
+       "4342  6.129080    0.209182 -3.591605  2.468435  ...  0.384223   11.540393   \n",
+       "4345  0.950266    0.034908 -0.111102  0.628777  ...  0.461759   12.407557   \n",
+       "4358  0.819111    0.027533 -0.748168 -0.128032  ...  0.383017   10.988910   \n",
+       "4368  0.840242    0.028677  0.797118 -0.087680  ...  0.384223   11.540393   \n",
+       "\n",
+       "      sat_disk  sat_halo  host_disk  host_halo  other_sat    IGM       angle  \\\n",
+       "131      False     False      False      False      False   True  132.074365   \n",
+       "196      False      True      False      False      False  False   64.047083   \n",
+       "252      False     False      False      False      False   True  120.198725   \n",
+       "268      False      True      False      False      False  False   82.862729   \n",
+       "277      False     False      False      False      False   True  166.315932   \n",
+       "...        ...       ...        ...        ...        ...    ...         ...   \n",
+       "4335     False     False      False      False      False   True  119.640462   \n",
+       "4342     False     False      False      False      False   True  121.415964   \n",
+       "4345     False     False      False      False      False   True   77.476906   \n",
+       "4358     False      True      False      False      False  False   53.793614   \n",
+       "4368     False      True      False      False      False  False  133.845505   \n",
+       "\n",
+       "          key  \n",
+       "131   h148_13  \n",
+       "196   h148_13  \n",
+       "252   h148_13  \n",
+       "268   h148_13  \n",
+       "277   h148_13  \n",
+       "...       ...  \n",
+       "4335  h329_33  \n",
+       "4342  h329_33  \n",
+       "4345  h329_33  \n",
+       "4358  h329_33  \n",
+       "4368  h329_33  \n",
+       "\n",
+       "[15229 rows x 62 columns]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "heated"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "000bbe35",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8560"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "8916-356"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "606933b6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "016609da",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b975eb4d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ad67d73d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b13355ed",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fbc39bfa",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d88f726c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "e1e0ade3",
    "metadata": {},
