--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -24,6 +24,104 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "21d15b44",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "keys = ['h148_13','h148_28','h148_37','h148_45','h148_68','h148_80','h148_283',\n",
+    "        'h148_278','h148_329','h229_20','h229_22','h229_23','h229_27','h229_55',\n",
+    "        'h242_24','h242_41','h242_80','h329_33','h329_137']\n",
+    "\n",
+    "for key in keys:\n",
+    "    sim = str(key[:4])\n",
+    "    haloid = int(key[5:])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "47ffc5a5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = read_tracked_particles_v2('h148', 13)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "2df93cac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data1 = read_tracked_particles('h148', 13)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "cc572393",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['time', 'pid', 'rho', 'temp', 'mass', 'coolontime', 'r', 'r_per_Rvir',\n",
+       "       'x', 'y', 'z', 'satRvir', 'a', 'vx', 'vy', 'vz', 'v', 'r_rel_host',\n",
+       "       'r_rel_host_per_Rvir', 'x_rel_host', 'y_rel_host', 'z_rel_host',\n",
+       "       'hostRvir', 'vx_rel_host', 'vy_rel_host', 'vz_rel_host', 'v_rel_host',\n",
+       "       'sat_Xc', 'sat_Yc', 'sat_Zc', 'sat_vx', 'sat_vy', 'sat_vz', 'host_Xc',\n",
+       "       'host_Yc', 'host_Zc', 'host_vx', 'host_vy', 'host_vz', 'sat_Mstar',\n",
+       "       'sat_Mgas', 'host_Mstar', 'host_Mgas', 'sat_r_half', 'sat_r_gas',\n",
+       "       'host_r_half', 'host_r_gas', 'in_sat', 'in_host', 'in_other_sat',\n",
+       "       'in_IGM', 'dt', 'r_gal', 'host_r_gal', 'sat_disk', 'sat_halo',\n",
+       "       'host_disk', 'host_halo', 'other_sat', 'IGM', 't', 'sat_Mvir'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "f9e998cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['time', 'pid', 'rho', 'temp', 'mass', 'coolontime', 'r', 'r_per_Rvir',\n",
+       "       'x', 'y', 'z', 'satRvir', 'a', 'vx', 'vy', 'vz', 'v', 'r_rel_host',\n",
+       "       'r_rel_host_per_Rvir', 'x_rel_host', 'y_rel_host', 'z_rel_host',\n",
+       "       'hostRvir', 'vx_rel_host', 'vy_rel_host', 'vz_rel_host', 'v_rel_host',\n",
+       "       'sat_Xc', 'sat_Yc', 'sat_Zc', 'sat_vx', 'sat_vy', 'sat_vz', 'host_Xc',\n",
+       "       'host_Yc', 'host_Zc', 'host_vx', 'host_vy', 'host_vz', 'sat_Mstar',\n",
+       "       'sat_Mgas', 'host_Mstar', 'host_Mgas', 'sat_r_half', 'sat_r_gas',\n",
+       "       'host_r_half', 'host_r_gas', 'in_sat', 'in_host', 'in_other_sat',\n",
+       "       'in_IGM', 'dt', 'r_gal', 'host_r_gal', 'sat_disk', 'sat_halo',\n",
+       "       'host_disk', 'host_halo', 'other_sat', 'IGM'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data1.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 22,
    "id": "fd99b977",
    "metadata": {},
