Data acquisition update.

--- a/TestScripts/tracked_rewrite_chk.ipynb
+++ b/TestScripts/tracked_rewrite_chk.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "21d15b44",
    "metadata": {},
    "outputs": [],
@@ -45,22 +45,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = read_tracked_particles_v2('h148', 13)"
+    "data = read_tracked_particles('h148', 13)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "2df93cac",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data1 = read_tracked_particles('h148', 13)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
    "id": "cc572393",
    "metadata": {},
    "outputs": [
@@ -80,13 +70,45 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "24690fa8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0         1.615831e+10\n",
+       "1         1.615831e+10\n",
+       "2         1.615831e+10\n",
+       "3         1.615831e+10\n",
+       "4         1.615831e+10\n",
+       "              ...     \n",
+       "299100    9.415818e+09\n",
+       "299101    9.415818e+09\n",
+       "299102    9.415818e+09\n",
+       "299103    9.415818e+09\n",
+       "299104    9.415818e+09\n",
+       "Name: sat_Mvir, Length: 299105, dtype: float64"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.sat_Mvir"
    ]
   },
   {
