Analysis with latest data.

--- a/TestScripts/Vvir_Additions.ipynb
+++ b/TestScripts/Vvir_Additions.ipynb
@@ -121,28 +121,24 @@
     "G = 4.53943e-24\n",
     "\n",
     "\n",
-    "# creating callable key for virial velocities.\n",
-    "predischarged['Vvir'] = np.sqrt(G * predischarged.mass / predischarged.satRvir)\n",
-    "\n",
-    "discharged['Vvir'] = np.sqrt(G * discharged.sat_Mgas / discharged.satRvir)\n",
-    "\n",
-    "accreted['Vvir'] = np.sqrt(G * accreted.sat_Mgas / accreted.satRvir)\n",
-    "\n",
-    "preheated['Vvir'] = np.sqrt(G * preheated.sat_Mgas / preheated.satRvir)\n",
-    "\n",
-    "heated['Vvir'] = np.sqrt(G * heated.sat_Mgas / heated.satRvir)\n",
+    "# compiling virial velocities for each particle's respective satellite.\n",
+    "pre_vvir = np.sqrt(G * predischarged.sat_Mgas / predischarged.satRvir)\n",
+    "all_vvir = np.sqrt(G * discharged.sat_Mgas / discharged.satRvir)\n",
+    "acc_vvir = np.sqrt(G * accreted.sat_Mgas / accreted.satRvir)\n",
+    "hpre_vvir = np.sqrt(G * preheated.sat_Mgas / preheated.satRvir)\n",
+    "hot_vvir = np.sqrt(G * heated.sat_Mgas / heated.satRvir)\n",
     "\n",
     "\n",
-    "# creating callable key for v/V_vir.\n",
-    "predischarged['v_per_Vvir'] = predischarged.v * 10**8 / (predischarged.Vvir * 10**8)\n",
+    "# creating callable key for v/vvir ratio.\n",
+    "predischarged['v_per_Vvir'] = predischarged.v / pre_vvir\n",
     "\n",
-    "discharged['v_per_Vvir'] = discharged.v * 10**8 / (discharged.Vvir * 10**8)\n",
+    "discharged['v_per_Vvir'] = discharged.v / all_vvir\n",
     "\n",
-    "accreted['v_per_Vvir'] = accreted.v / accreted.Vvir\n",
+    "accreted['v_per_Vvir'] = accreted.v / acc_vvir\n",
     "\n",
-    "preheated['v_per_Vvir'] = preheated.v / preheated.Vvir\n",
+    "preheated['v_per_Vvir'] = preheated.v / hpre_vvir\n",
     "\n",
-    "heated['v_per_Vvir'] = heated.v / heated.Vvir"
+    "heated['v_per_Vvir'] = heated.v / hot_vvir"
    ]
   },
   {
