--- a/StellarFeedback_p1.ipynb
+++ b/StellarFeedback_p1.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Gas Discharge & Stellar Feedback-driven Outflows (Part 1 /2):\n",
     "## General Observations\n",
-    "`-- Leo Lonzarich, 20 October 2021 // [Updated 8-11-21] --`\n",
+    "`-- Leo Lonzarich, 20 October 2021 // [Updated 14-11-21] --`\n",
     "\n",
     "\n",
     "### Table of Contents\n",
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "id": "c2217491",
    "metadata": {},
    "outputs": [],
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "id": "80092e6c",
    "metadata": {
     "scrolled": true
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "id": "db6b647c",
    "metadata": {},
    "outputs": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "id": "cee8c613",
    "metadata": {
     "scrolled": true
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "id": "84fcf907",
    "metadata": {
     "scrolled": false
@@ -761,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 26,
    "id": "63538dc9",
    "metadata": {},
    "outputs": [
@@ -813,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "id": "6e5c2d38",
    "metadata": {},
    "outputs": [],
@@ -833,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 28,
    "id": "464c34ce",
    "metadata": {},
    "outputs": [
@@ -894,10 +894,114 @@
    "id": "5d3a3dc5",
    "metadata": {},
    "source": [
-    "From the above, we see that exit angles of pre-discharge and SNe-discharged gas follow closely and indicate no notable preference in exit direction. For the whole of discharged gas, however, we observe the expected preference for small angles as a consequence of ram pressure stripping.\n",
+    "From the above, most glaring is that it all discharged and SNe-heated discharged gas both seem to exit at a near identical distribution of angles from their satellite's bulk. For the whole of discharged gas, however, we observe the expected preference for small angles as a consequence of ram pressure stripping.\n",
     "\n",
-    "### Comparing Temperature <a class=\"anchor\" id=\"comptemperature\"></a>\n",
-    "\n"
+    "We now look at exit angles for different radial distances:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2ae5f593",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sat_pos = np.array([np.array(ejected.sat_Xc), np.array(ejected.sat_Yc), np.array(ejected.sat_Zc)]).T\n",
+    "host_pos = np.array([np.array(ejected.host_Xc), np.array(ejected.host_Yc), np.array(ejected.host_Zc)]).T\n",
+    "pos_rel = (sat_pos - host_pos) \n",
+    "pos_mag1 = np.sqrt(pos_rel[:,0]**2 + pos_rel[:,1]**2 + pos_rel[:,2]**2)\n",
+    "pos_mag1 /= np.array(ejected.hostRvir)\n",
+    "\n",
+    "sat_pos = np.array([np.array(expelled.sat_Xc), np.array(expelled.sat_Yc), np.array(expelled.sat_Zc)]).T\n",
+    "host_pos = np.array([np.array(expelled.host_Xc), np.array(expelled.host_Yc), np.array(expelled.host_Zc)]).T\n",
+    "pos_rel = (sat_pos - host_pos) \n",
+    "pos_mag2 = np.sqrt(pos_rel[:,0]**2 + pos_rel[:,1]**2 + pos_rel[:,2]**2)\n",
+    "pos_mag2 /= np.array(expelled.hostRvir)\n",
+    "\n",
+    "fig,ax = plt.subplots(1,3, dpi=300, figsize=(7.5,2.2), sharey=True)\n",
+    "\n",
+    "# leftmost ax will be r > 0.75\n",
+    "ax[0].annotate(r'$0.75 < r/R_{\\rm vir}$',(0.95,0.95),xycoords='axes fraction',ha='right',va='top')\n",
+    "cond = pos_mag1 >= 0.75\n",
+    "y1, bins = np.histogram(ejected.angle[cond], bins=bins, weights=ejected.mass[cond]/np.sum(ejected.mass[cond]))\n",
+    "l1 = r'Ejected particles'\n",
+    "ax[0].plot(bincenters, y1, label=l1, color='r')\n",
+    "\n",
+    "cond = pos_mag2 > 0.75\n",
+    "y2, bins = np.histogram(expelled.angle[cond], bins=bins, weights=expelled.mass[cond]/np.sum(expelled.mass[cond]))\n",
+    "l2 = r'Expelled particles'\n",
+    "ax[0].plot(bincenters, y2, label=l2, color='b')\n",
+    "\n",
+    "\n",
+    "# middle ax will be 0.5 < r < 0.75\n",
+    "ax[1].annotate(r'$0.5 < r/R_{\\rm vir} < 0.75$',(0.95,0.95),xycoords='axes fraction',ha='right',va='top')\n",
+    "cond = (pos_mag1 >= 0.5) & (pos_mag1 < 0.75)\n",
+    "y1, bins = np.histogram(ejected.angle[cond], bins=bins, weights=ejected.mass[cond]/np.sum(ejected.mass[cond]))\n",
+    "ax[1].plot(bincenters, y1, color='r')\n",
+    "\n",
+    "cond = (pos_mag2 >= 0.5) & (pos_mag2 < 0.75)\n",
+    "y2, bins = np.histogram(expelled.angle[cond], bins=bins, weights=expelled.mass[cond]/np.sum(expelled.mass[cond]))\n",
+    "ax[1].plot(bincenters, y2, color='b')\n",
+    "\n",
+    "\n",
+    "# rightmost ax will be r < 0.5\n",
+    "ax[2].annotate(r'$r/R_{\\rm vir} < 0.5$',(0.95,0.95),xycoords='axes fraction',ha='right',va='top')\n",
+    "cond = pos_mag1 < 0.5\n",
+    "y1, bins = np.histogram(ejected.angle[cond], bins=bins, weights=ejected.mass[cond]/np.sum(ejected.mass[cond]))\n",
+    "ax[2].plot(bincenters, y1, color='r')\n",
+    "\n",
+    "cond = pos_mag2 < 0.5\n",
+    "y2, bins = np.histogram(expelled.angle[cond], bins=bins, weights=expelled.mass[cond]/np.sum(expelled.mass[cond]))\n",
+    "ax[2].plot(bincenters, y2, color='b')\n",
+    "\n",
+    "\n",
+    "# plot the line that represents a random distribution\n",
+    "percent = 1/N\n",
+    "ax[0].plot([0,180],[percent,percent],linestyle='--',color='0.7',zorder=-1)\n",
+    "ax[1].plot([0,180],[percent,percent],linestyle='--',color='0.7',zorder=-1)\n",
+    "ax[2].plot([0,180],[percent,percent],linestyle='--',color='0.7',zorder=-1, label='random distribution')\n",
+    "\n",
+    "# add legends\n",
+    "leg1 = ax[0].legend(title='State transfer', loc='upper left')\n",
+    "leg1._legend_box.align = 'left'\n",
+    "ax[2].legend(loc=(0.26,0.74))\n",
+    "\n",
+    "# labels and ticks and such\n",
+    "ax[1].set_xlabel(r'Particle Exit Angle $\\theta$ ($^\\circ$)')\n",
+    "ax[0].set_ylabel('Mass fraction')\n",
+    "for a in ax:\n",
+    "    a.set_xlim(0,180)\n",
+    "    a.set_ylim(0,0.5)\n",
+    "\n",
+    "    a.xaxis.set_minor_locator(mpl.ticker.MultipleLocator(5))\n",
+    "    a.yaxis.set_minor_locator(mpl.ticker.MultipleLocator(0.01))\n",
+    "\n",
+    "# plt.savefig('plots/theta_allsats_byR.pdf')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "69a0765d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "03092a84",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "06c90ddd",
+   "metadata": {},
+   "source": [
+    "### Comparing Temperature <a class=\"anchor\" id=\"comptemperature\"></a>"
    ]
   },
   {
